# TP1Algo3

./: README.md  README.txt  index.html  prueba.txt
src/tp1/: CMakeLists.txt  README.txt  command  execute3  prueba2.txt  tp1.cpp  tp1.h
src/tp1/ej1/: ej1.cpp  ej1.h  purgatorioDeFunciones.txt
src/tp1/ej1-2/: Prueba.txt  TP1_idea.txt  ej1-2.cpp  ej1-2.h  purgatorioDeFunciones.txt
src/tp1/ej1-2/instancias-ej1-2/: testFacil.clq
src/tp1/ej2/: ej2.cpp  ej2.h
src/tp1/ej3/: ej3.cpp  ej3.h  ideas
src/tp1/ej3/instancias-3/instancias/: instancia_14.txt
src/tp1/ej4/: ej4.cpp  ej4.h
